--- a/WEEK1/index.html
+++ b/WEEK1/index.html
@@ -32,11 +32,31 @@
 </head>
 <body>
     <header>
-        <h1>Webathon Week 1</h1>
+        <div class="navbar">
+            <h1>Welcome to BootCamp</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
-        <section>
-            <h2>Section 1</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec
+    
+    <section class="hero">
+        <h2>Innovative Learning Platform</h2>
+        <p>Enhance your skills with our hands-on BootCamp experience.</p>
+        <a href="#" class="btn">Get Started</a>
+    </section>
+
+    <section id="about" class="about">
+        <h2>Why BootCamp?</h2>
+        <p>Our webathon provides a dynamic environment for aspiring developers to excel and grow.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 BootCamp Webathon. Empowering Innovators.</p>
+    </footer>
+</body>
 </html>
